@@ -3,6 +3,6 @@ from nevow import appserver
 from formal.examples import main
 
 application = service.Application('examples')
-service = internet.TCPServer(8000, main.makeSite(application))
+service = internet.TCPServer(8000, main.makeSite())
 service.setServiceParent(application)
 
